@@ -15,12 +15,14 @@ Tue Nov 02 09:33:00 2010 Damien Churchill <damoxc@gmail.com>
 		+ bugfix:  use sprintf rather than python strings in the msg_handler
 		+ bugfix:  use sprintf rather than python strings in the err_handler
 		+ bugfix:  make compatible with Cython 0.13
+        + feature: remove the trusted parameter to connect()
 	* pymssql.pyx:
 		+ feature: add initial support for callproc()
 		+ feature: add support for setting the application name
 		+ bugfix:  fix issue #7, thanks has.temp3
 		+ bugfix:  fix issue #10, rowcount property being incorrect
 		+ bugfix:  make compatible with Cython 0.13
+        + feature: remove the trusted parameter to connect()
 	* MANIFEST.in:
 		+ feature: include the tests
 	* version 1.9.909
